[tool.poetry]
name = "aipipeline"
version = "0.1.0"
description = ""
authors = ["Tara Walker", "Luis Quintanilla", "Diego Colombo", "Rich Lander"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
duckdb = "^1.1.3"
fastapi = "^0.115.6"
langchainhub = "^0.1.21"
llama-index = "^0.12.4"
llama-index-embeddings-azure-openai = "^0.3.0"
llama-index-embeddings-text-embeddings-inference = "^0.3.1"
llama-index-llms-azure-openai = "^0.3.0"
llama-index-llms-llama-cpp = "^0.3.0"
llama-index-multi-modal-llms-azure-openai = "^0.3.1"
llama-index-postprocessor-rankgpt-rerank = "^0.3.0"
llama-index-readers-file = "^0.4.1"
llama-index-readers-web = "^0.3.1"
nebula3-python = "^3.8.3"
neo4j = "^5.27.0"
openai-whisper = "^20240930"
pillow = "^11.0.0"
poppler-utils = "^0.1.0"
pydub = "^0.25.1"
pymupdf = "^1.25.0"
pypdf = "^5.1.0"
pytest-playwright = "^0.6.2"
python-magic = "^0.4.27"
qdrant-client = "^1.12.1"
ragas = "^0.2.7"
scikit-learn = "^1.6.0"
trulens-eval = "^1.2.10"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
wikipedia = "^1.4.0"
python-magic-bin = "^0.4.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
